--- a/result.html
+++ b/result.html
@@ -51,7 +51,7 @@
         }
         .certificate-container {
             max-width: 900px; /* Adjusted for a wider view */
-            margin: 1rem auto; /* Adjusted margin */
+            margin: 2rem auto; /* Adjusted margin for more space */
             background: #ffffff;
             border-radius: 1rem;
             box-shadow: 0 5px 20px rgba(0, 0, 0, 0.08); /* Lighter shadow */
@@ -109,6 +109,9 @@
             padding: 1.5rem; 
             text-align: center; 
             background: linear-gradient(to bottom, #f8fafc, #ffffff); 
+            display: flex; /* Added flexbox for centering */
+            justify-content: center; /* Centered the logo */
+            align-items: center;
         }
         .company-logo { 
             max-height: 5rem; 
