--- a/result.html
+++ b/result.html
@@ -25,29 +25,29 @@
             padding: 1rem; /* Reduced padding */
             color: #1f2937;
         }
-        a { 
-            color: #2563eb; 
-            text-decoration: none; 
-            transition: color 0.2s ease; 
+        a {
+            color: #2563eb;
+            text-decoration: none;
+            transition: color 0.2s ease;
         }
-        a:hover { 
-            color: #1e40af; 
-            text-decoration: underline; 
+        a:hover {
+            color: #1e40af;
+            text-decoration: underline;
         }
-        #loader { 
-            text-align: center; 
-            padding: 3rem; 
-            font-size: 1.25rem; 
-            color: #4b5563; 
+        #loader {
+            text-align: center;
+            padding: 3rem;
+            font-size: 1.25rem;
+            color: #4b5563;
         }
-        .not-found { 
-            text-align: center; 
-            padding: 3rem; 
-            color: #dc2626; 
-            background: #fef2f2; 
-            border-radius: 0.75rem; 
-            max-width: 32rem; 
-            margin: 1rem auto; 
+        .not-found {
+            text-align: center;
+            padding: 3rem;
+            color: #dc2626;
+            background: #fef2f2;
+            border-radius: 0.75rem;
+            max-width: 32rem;
+            margin: 1rem auto;
         }
         .certificate-container {
             max-width: 900px; /* Adjusted for a wider view */
@@ -76,16 +76,16 @@
             filter: blur(2px);
             z-index: 0;
         }
-        .certificate-container > * { 
-            position: relative; 
-            z-index: 1; 
+        .certificate-container > * {
+            position: relative;
+            z-index: 1;
         }
-        .lang-toggle { 
-            display: flex; 
-            justify-content: flex-end; 
+        .lang-toggle {
+            display: flex;
+            justify-content: flex-end;
             max-width: 900px; /* Matched with certificate width */
-            margin: 1rem auto; 
-            gap: 0.5rem; 
+            margin: 1rem auto;
+            gap: 0.5rem;
         }
         .lang-toggle button {
             padding: 0.5rem 1.25rem;
@@ -97,100 +97,100 @@
             cursor: pointer;
             transition: background-color 0.3s ease, transform 0.2s ease;
         }
-        .lang-toggle button:hover:enabled { 
-            background: #1e40af; 
-            transform: translateY(-1px); 
+        .lang-toggle button:hover:enabled {
+            background: #1e40af;
+            transform: translateY(-1px);
         }
-        .lang-toggle button:disabled { 
-            background: #9ca3af; 
-            cursor: not-allowed; 
+        .lang-toggle button:disabled {
+            background: #9ca3af;
+            cursor: not-allowed;
         }
-        .cert-header { 
-            padding: 1.5rem; 
-            text-align: center; 
-            background: linear-gradient(to bottom, #f8fafc, #ffffff); 
+        .cert-header {
+            padding: 1.5rem;
+            text-align: center;
+            background: linear-gradient(to bottom, #f8fafc, #ffffff);
             display: flex; /* Added flexbox for centering */
             justify-content: center; /* Centered the logo */
             align-items: center;
         }
-        .company-logo { 
-            max-height: 5rem; 
-            object-fit: contain; 
+        .company-logo {
+            max-height: 5rem;
+            object-fit: contain;
         }
-        .cert-body { 
-            display: flex; 
-            align-items: center; 
-            padding: 2rem; 
-            gap: 1.5rem; 
-            flex-wrap: wrap; 
+        .cert-body {
+            display: flex;
+            align-items: center;
+            padding: 2rem;
+            gap: 1.5rem;
+            flex-wrap: wrap;
         }
-        .profile-picture-container { 
-            flex: 0 0 10rem; 
-            text-align: center; 
+        .profile-picture-container {
+            flex: 0 0 10rem;
+            text-align: center;
         }
-        .profile-picture { 
-            width: 10rem; 
-            height: 10rem; 
-            border-radius: 50%; 
-            object-fit: cover; 
-            border: 3px solid #2563eb; 
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
+        .profile-picture {
+            width: 10rem;
+            height: 10rem;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid #2563eb;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
-        .person-info { 
-            flex: 1; 
-            text-align: left; 
+        .person-info {
+            flex: 1;
+            text-align: left;
         }
-        .person-info .name { 
-            font-size: 1.75rem; 
-            margin: 0; 
-            color: #1f2937; 
-            font-weight: 700; 
+        .person-info .name {
+            font-size: 1.75rem;
+            margin: 0;
+            color: #1f2937;
+            font-weight: 700;
         }
-        .person-info .designation { 
-            font-size: 1.25rem; 
-            margin: 0.25rem 0; 
-            color: #2563eb; 
-            font-weight: 500; 
+        .person-info .designation {
+            font-size: 1.25rem;
+            margin: 0.25rem 0;
+            color: #2563eb;
+            font-weight: 500;
         }
-        .person-info .company { 
-            font-size: 1.125rem; 
-            color: #4b5563; 
+        .person-info .company {
+            font-size: 1.125rem;
+            color: #4b5563;
         }
-        .cert-details { 
-            margin: 1.5rem; 
-            padding: 0.5rem; 
+        .cert-details {
+            margin: 1.5rem;
+            padding: 0.5rem;
         }
-        .detail-item { 
-            padding: 0.75rem 0; 
-            border-bottom: 1px solid #e5e7eb; 
-            font-size: 1rem; 
-            display: flex; 
-            justify-content: space-between; 
+        .detail-item {
+            padding: 0.75rem 0;
+            border-bottom: 1px solid #e5e7eb;
+            font-size: 1rem;
+            display: flex;
+            justify-content: space-between;
         }
-        .detail-key { 
-            font-weight: 600; 
-            color: #1f2937; 
+        .detail-key {
+            font-weight: 600;
+            color: #1f2937;
         }
-        .detail-value { 
-            color: #374151; 
+        .detail-value {
+            color: #374151;
         }
-        .cert-footer { 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            margin: 1.5rem; 
-            padding: 0.75rem 1.5rem; 
-            color: #6b7280; 
-            font-size: 0.875rem; 
+        .cert-footer {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 1.5rem;
+            padding: 0.75rem 1.5rem;
+            color: #6b7280;
+            font-size: 0.875rem;
         }
-        .qr-code { 
-            width: 5rem; 
-            height: 5rem; 
+        .qr-code {
+            width: 5rem;
+            height: 5rem;
         }
-        .reg-number { 
-            font-weight: 600; 
-            font-size: 1.125rem; 
-            color: #1f2937; 
+        .reg-number {
+            font-weight: 600;
+            font-size: 1.125rem;
+            color: #1f2937;
         }
         .back-button {
             position: fixed;
@@ -207,58 +207,79 @@
             z-index: 1000;
             transition: background-color 0.3s ease, transform 0.2s ease;
         }
-        .back-button:hover { 
-            background: #1f2937; 
-            transform: translateY(-1px); 
+        .back-button:hover {
+            background: #1f2937;
+            transform: translateY(-1px);
         }
 
         /* Print-specific styles */
         @media print {
-            body { 
-                background: #fff; 
+            body {
+                background: #fff;
             }
-            .certificate-container { 
-                box-shadow: none; 
-                margin: 0; 
+            .certificate-container {
+                box-shadow: none;
+                margin: 0;
                 border: none;
                 max-width: none;
                 padding: 15mm;
                 border: 1px solid #e5e7eb;
             }
-            .certificate-container::before { 
-                opacity: 0.03; 
+            .certificate-container::before {
+                opacity: 0.03;
             }
-            #loader, .not-found, .back-button, .lang-toggle, #download-btn { 
-                display: none; 
+            #loader, .not-found, .back-button, .lang-toggle, #download-btn {
+                display: none;
             }
-            .cert-body { 
-                padding: 1rem; 
+            /* Increased font sizes for print */
+            .person-info .name {
+                font-size: 2rem;
+            }
+            .person-info .designation {
+                font-size: 1.5rem;
+            }
+            .person-info .company {
+                font-size: 1.25rem;
+            }
+            .detail-item {
+                font-size: 1.125rem;
+            }
+            .reg-number {
+                font-size: 1.25rem;
+            }
+            .cert-body {
+                padding: 1rem;
             }
             .cert-footer {
                 padding: 1rem;
             }
+            /* Increased QR code size for print */
+            .qr-code {
+                width: 70px;
+                height: 70px;
+            }
         }
         @media (max-width: 600px) {
-            .cert-body { 
-                flex-direction: column; 
-                align-items: center; 
-                text-align: center; 
+            .cert-body {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
             }
-            .person-info { 
-                text-align: center; 
+            .person-info {
+                text-align: center;
             }
-            .cert-footer { 
-                flex-direction: column; 
-                gap: 0.75rem; 
-                align-items: center; 
+            .cert-footer {
+                flex-direction: column;
+                gap: 0.75rem;
+                align-items: center;
             }
-            .detail-item { 
-                flex-direction: column; 
-                text-align: center; 
+            .detail-item {
+                flex-direction: column;
+                text-align: center;
             }
-            .profile-picture { 
-                width: 8rem; 
-                height: 8rem; 
+            .profile-picture {
+                width: 8rem;
+                height: 8rem;
             }
         }
     </style>
@@ -433,7 +454,7 @@
                     await new Promise(resolve => setTimeout(resolve, 300));
                     
                     const canvas = await html2canvas(tempContainer, {
-                        scale: 2,
+                        scale: 3, /* Increased scale for better resolution */
                         useCORS: true,
                         allowTaint: true,
                         ignoreElements: (element) => element.classList.contains('lang-toggle')
